--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A light-weight core banking application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha server/test/test.js --require @babel/register --exit",
     "clean": "rm -rf build && mkdir build",
     "build-server": "babel -d ./build ./server",
     "build": "npm run clean && npm run build-server",
@@ -33,10 +33,14 @@
   },
   "homepage": "https://github.com/chuxmykel/banka#readme",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.0.2"
   },
   "devDependencies": {
