--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-server": "babel -d ./build ./server",
     "build": "npm run clean && npm run build-server",
     "start": "node ./build/app.js",
-    "dev": "nodemon --exec babel-node server/app.js"
+    "dev": "nodemon --exec babel-node server/app.js",
+    "nyc": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -50,9 +51,12 @@
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.0",
+    "coveralls": "^3.0.3",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "nodemon": "^1.18.10"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.18.10",
+    "nyc": "^13.3.0"
   }
 }
