--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run clean && npm run build-server",
     "start": "node ./build/app.js",
     "dev": "nodemon --exec babel-node server/app.js",
-    "nyc": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "nyc": "nyc --reporter=lcov npm run test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
