chore(tests): Improve test coverage - use nyc to check coverage - write tests for uncovered lines - remove custom error messages from Joi validations [Delivers #165010280]

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node ./build/app.js",
     "dev": "nodemon --exec babel-node server/app.js",
     "nyc": "nyc --reporter=lcov npm run test && nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc npm test",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
