--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A light-weight core banking application.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha server/test/test.js --require @babel/register --exit",
+    "test": "mocha server/v1/test/test.js --require @babel/register --exit",
     "clean": "rm -rf build && mkdir build",
     "build-server": "babel -d ./build ./server",
     "build": "npm run clean && npm run build-server",
     "start": "node ./build/app.js",
-    "dev": "nodemon --exec babel-node server/app.js",
+    "dev": "export DEBUG=dev && nodemon --exec babel-node server/app.js",
     "nyc": "nyc --reporter=lcov npm run test && nyc report --reporter=text-lcov | coveralls",
     "coverage": "nyc npm test",
     "heroku-postbuild": "npm run build"
@@ -40,11 +40,14 @@
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "debug": "^4.1.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "moment": "^2.24.0",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
