--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.0.2",
     "moment": "^2.24.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
