--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "export DEBUG=dev && nodemon --exec babel-node server/app.js",
     "nyc": "nyc --reporter=lcov npm run test && nyc report --reporter=text-lcov | coveralls",
     "coverage": "nyc npm test",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "migrations": "export DEBUG=dev && babel-node server/v1/app/migrations/dropTables && babel-node server/v1/app/migrations/createTables && babel-node server/v1/app/migrations/seed"
   },
   "repository": {
     "type": "git",
@@ -49,7 +50,8 @@
     "mocha": "^6.0.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "nodemailer": "^6.1.0"
+    "nodemailer": "^6.1.0",
+    "pg": "^7.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
