--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-SECRET_KEY = your_jwt_secret_key
-SALT_ROUNDS = number_of_salt_rounds_for_bcrypt
+SECRET_KEY = string
+SALT_ROUNDS = integer
+SERVER_MAIL = functional google email address
+MAIL_PASSWORD = mail password
+DATABASE_URL= postgres://user_name:password@host:port/db_name
+TEST_DATABASE_URL=postgres://user_name:password@host:port/test_db_name
