--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^7.0.0",
     "errorhandler": "^1.5.0",
@@ -51,7 +52,8 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.1.0",
-    "pg": "^7.10.0"
+    "pg": "^7.10.0",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
