feat(sign up): fetch the sign up endpoint
- work on the sign up page to get user details and sign them up
- work on the dashboard to display basic user details

[Delivers #165661059].

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nyc": "nyc --reporter=lcov npm run test && nyc report --reporter=text-lcov | coveralls",
     "coverage": "nyc npm test",
     "heroku-postbuild": "npm run build",
-    "migrations": "export DEBUG=dev && babel-node server/v1/app/migrations/dropTables && babel-node server/v1/app/migrations/createTables && babel-node server/v1/app/migrations/seed"
+    "migrations": "export DEBUG=dev && babel-node server/v1/app/migrations/dropTables && babel-node server/v1/app/migrations/createTables && babel-node server/v1/app/migrations/seed",
+    "heroku-migrations": "export DEBUG=dev && node build/v1/app/migrations/dropTables && node build/v1/app/migrations/createTables && node build/v1/app/migrations/seed"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,8 @@
     "api",
     "endpoint",
     "bootcamp",
-    "challenge-2"
+    "challenge-2",
+    "fetchAPI"
   ],
   "author": "Ngwobia, Chukwudi Mike",
   "license": "ISC",
